experiments/correlation_mk3/tmp_files/7750.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/7750.c(76): warning #161: unrecognized #pragma
    #pragma scop
            ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/7750.c(79): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 1) simd 
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/7750.c(88): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 1) simd 
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/7750.c(103): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 1) simd 
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/7750.c(106): error: schedule clause is incompatible with directive
        #pragma omp target teams distribute thread_limit(128) schedule(static, 1)
                                                              ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/7750.c(115): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 1) simd 
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/7750.c(128): warning #161: unrecognized #pragma
    #pragma endscop
            ^

compilation aborted for /uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/7750.c (code 2)
